# Hackathon-Viber-Code-Pro-Max

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  Dockerfile.vercel  Luat_Sinh_Du_Lieu_SRRM.md  Makefile  README.md  deploy.sh  deploy_fe.sh  docker-compose.yml  git_merge_log.txt  index.py  package-lock.json  pyproject.toml  requirements.txt  ruff.toml  run_tests.py  schema.sql  task.md  ui.html  vercel.json  walkthrough.md
.claude/: settings.json
.github/workflows/: ci.yml
adrs/: 0002-tech-stack.md  0003-folder-structure.md
ai/: Dockerfile  README.md  pyproject.toml
ai/ai_service/: adapter.py  app.py  config.py  datagen.py  forecasting.py  optimization.py  pricing.py  schemas.py  unconstraining.py
ai/ai_service/optimization/: __init__.py  acceptance.py  dlp.py  gap_combination.py  seat_assignment.py
ai/ai_service/pricing/: __init__.py  data_prep.py  elasticity.py  markup.py  regression.py
ai/models/: model.pkl
ai/scripts/: eda.py  eval.py  eval_optimization.py  eval_pricing.py  gen_data.py  train.py
ai/src/ai/: __init__.py  config.py  graph.py  llm.py  logging.py
ai/src/ai_service/: booking_curve.py  engine.py  forecasting.py  optimization.py  pricing.py
ai/tests/: conftest.py  test_ai_service.py  test_ai_service_endpoints.py  test_booking_curve.py  test_forecasting.py  test_graph.py  test_logging.py  test_model_artifact.py  test_optimization.py  test_pricing.py  test_pricing_api.py  test_unconstraining.py
ai_service/: adapter.py  app.py  booking_curve.py  config.py  datagen.py  forecasting.py  optimization.py  schemas.py  unconstraining.py
backend/: Dockerfile  index.py  pyproject.toml
backend/src/backend/: config.py  database.py  main.py  redis_client.py  worker.py
backend/src/backend/controllers/: __init__.py  ai_controller.py  analytics_controller.py  audit_controller.py  booking_controller.py  catalog_controller.py  chat_controller.py  checkdata_controller.py  event_controller.py  health_controller.py  optimize_controller.py  policy_controller.py  pricing_controller.py  seat_controller.py  simulation_controller.py
backend/src/backend/models/: __init__.py  chat.py
backend/src/backend/services/: __init__.py  ai_client.py  ai_pricing_client.py  analytics_service.py  audit_service.py  booking_service.py  chat_service.py  checkdata_service.py  combined_booking_service.py  expiry_task.py  optimize_service.py  policy_service.py  pricing_service.py  refund_policy.py  simulation_service.py
backend/src/backend/views/: __init__.py  analytics_view.py  booking_view.py  chat_view.py  checkdata_view.py  combined_booking_view.py  event_view.py  health_view.py  pricing_view.py
backend/tests/: conftest.py  postgres_seed.sql  test_ai_client.py  test_analytics.py  test_audit.py  test_bid_price_acceptance.py  test_booking.py  test_catalog.py  test_checkdata_controller.py  test_checkdata_service.py  test_combined_booking.py  test_combined_booking_api.py  test_controllers.py  test_events.py  test_expiry_task.py  test_integration_flows.py  test_optimize.py  test_policy.py  test_pricing.py  test_quote_response.py  test_redis_client.py  test_refund_policy.py  test_rollback.py  test_seats.py  test_services.py  test_simulation.py  test_user_booking_api.py  test_vercel_entrypoint.py
contracts/: openapi.yaml
docs/: API_DOCS.md  ARCHITECTURE.md  AWS_RDS_POSTGRES_SETUP.md  CHECKDATA_PAGE.md  COMBINED_BOOKING.md  DATABASE_SCHEMA.md  prd_duong_sat.md
docs/UI_prd/: README.md  frontend_specs_mvp.md  frontend_task_list.md  hd_alerts_screen_guide.md  hd_audit_screen_guide.md  hd_dashboard_screen_guide.md  hd_ghep_api_khoi_1.md  ui_execute_plan.md  (+5 more)
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
models/: model.pkl
planning/: backlog.md
scripts/: check_boundaries.sh  eval.py  eval_optimization.py  export_ai_log.sh  export_codex_ai_log.ps1  export_gemini_log.py  gen_data.py  generate_seed_data.py  google_sheets_mcp.py  init_db.py  migrate_booking_groups.sql  run_pipeline.py  sanitize_log.py  scan_secrets.py  setup.sh  train.py
specs/: api-contracts.md  data-requirements.md  domains.md  features.md  product-vision.md
tasks/: SRRM-001-forecasting-model.md  SRRM-002-seat-optimization.md  SRRM-003-pricing-engine.md  SRRM-004-simulation-and-ui.md  SRRM-D1-database-schema.md
tests/: test_booking_curve.py  test_tools.py  test_unconstraining.py
(+114 files in other folders)
