[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai"
version = "1.0.0"
description = "LangGraph agent — thuần AI, không biết gì về HTTP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    # ai_service/ — Khối 1-2-3 (forecasting/optimization/pricing), phơi qua FastAPI /internal/*.
    # Chưa phải package cài đặt riêng (nằm ngoài src/), nhưng cần các thư viện này để
    # chạy và test được (xem ai/tests/conftest.py, scripts/train.py).
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
