[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai"
version = "1.0.0"
description = "SRRM ai-service — dependency manifest cho ai_service/ (forecasting/optimization/pricing)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    # ai_service/ — Khối 1-2-3 (forecasting/optimization/pricing), phơi qua FastAPI /internal/*.
    # Không phải package Python cài đặt được (không nằm dưới src/) — được import qua
    # sys.path (xem ai/tests/conftest.py, scripts/train.py). File pyproject.toml này chỉ
    # khai báo dependency + cấu hình pytest, không đóng gói module nào.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
