[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "1.0.0"
description = "FastAPI backend theo bố cục MVC — import ai như một thư viện"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "redis>=5.0.0",
    # Module AI — cài bằng: pip install -e ./ai
    "ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
